# Yasboot

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Kconfig  packages.json  readme.md  screen1.txt  sonar-project.properties
.github/workflow/: st.yml
.github/workflows/: clang-tidy.yml  simulation.yml  st.yml  st_sanitizers.yml  target.yml
board/: CMakeLists.txt  Kconfig
board/host/: CMakeLists.txt  Kconfig  host.img
board/mspc/: CMakeLists.txt  Kconfig  disk_layout.json  mspc.kconfig
board/mspc/boot/: boot.conf
board/mspc/boot/example_dir/: file_b
board/mspc/include/board_setup/: xosc.hpp
board/raspberry_pico/: CMakeLists.txt  raspi_pico.kconfig
cmake/: VirtualEnv.cmake  cppfront.cmake  yasboot_create_disk.cmake  yasboot_import_project.cmake
cmake/cppfront/: CMakeLists.txt  packages.json
common/: CMakeLists.txt
common/include/common/: units.hpp
common/include/common/filesystem/: disk_parameters.hpp  file_descriptors.hpp  filesystem.hpp  filesystem_mount_points.hpp
common/source/: disk_parameters.cpp2  file_descriptors.cc  file_descriptors.cpp  filesystem.cpp2  filesystem_mount_points.cc  filesystem_mount_points.cpp  filesystem_mount_points.cpp2  units.cpp
configs/host/: .config
configs/mspc/: .config
cpu/: CMakeLists.txt  Kconfig
cpu/arm/: CMakeLists.txt  Kconfig  arm.kconfig
cpu/arm/modules/: FindArmToolchain.cmake  generate_binary.cmake
cpu/arm/v6-m/: CMakeLists.txt  Kconfig  v6m.kconfig
cpu/arm/v6-m/common/: CMakeLists.txt
cpu/arm/v6-m/common/include/arm/v6-m/common/: gcc_arm_init.hpp
cpu/arm/v6-m/common/linker_scripts/: v6m_linker_script.ld
cpu/arm/v6-m/common/source/: gcc_arm_init.cpp  system_stubs.cpp  vector_table.S
cpu/arm/v6-m/common/source/hal/: flow.cpp
cpu/arm/v6-m/rp2040/: CMakeLists.txt  Kconfig  rp2040.kconfig
cpu/arm/v6-m/rp2040/cmake/: McuInit.cmake  packages.json
cpu/arm/v6-m/rp2040/include/arm/v6-m/rp2040/: configure_clocks.hpp
cpu/arm/v6-m/rp2040/linker_scripts/: mbr_second_part.ld  second_stage.ld  yasboot.ld
cpu/arm/v6-m/rp2040/scripts/: append_checksum.py  resize.py
cpu/arm/v6-m/rp2040/source/: configure_clocks.cpp  configure_mcu.cpp  second_stage.S  test.S  vector_table.S
cpu/arm/v6-m/rp2040/source/hal/: cpu.cc  disk.cc  disk.cpp  flash.cpp2  jump.S  panic.cpp  system_stubs.cc  system_stubs.cpp  uart.cc  uart.cpp
cpu/host/: CMakeLists.txt  Kconfig
cpu/host/arch/: Kconfig
cpu/host/arch/cpu/: Kconfig  generate_uart_kconfig.sh  uart_config.in
cpu/host/cmake/: McuInit.cmake  generate_binary.cmake
cpu/host/source/: CMakeLists.txt
cpu/host/source/hal/: CMakeLists.txt  disk.cpp  flow.cpp  uart.cpp
cpu/x86/: x86.kconfig
docker/: Dockerfile
docs/: booting_states.plantuml  bootloader.puml  memory_layout.tex  memory_layout.txt
features_configs/interfaces/: Kconfig
features_configs/interfaces/user/: Kconfig
features_configs/logger/: Kconfig
features_configs/yasld/: Kconfig
hal/: CMakeLists.txt
hal/interface/: CMakeLists.txt
hal/interface/include/hal/: disk.hpp  flow.hpp  panic.hpp  system_stubs.hpp  uart.h2  uart.hpp
kconfig/: GenerateConfig.cmake
kconfig_scripts/: GenerateConfig.cmake  generate.py
libstd/: iostream
modules/: CMakeLists.txt
modules/test_module/: CMakeLists.txt  entry.S  main.cpp  stubs.cpp
scripts/: create_disk.py  flash.py  requirements.txt  reset.py  write_yasboot.py
simulation/mspc/: CMakeLists.txt  mspc.repl  mspc.resc
source/: CMakeLists.txt  app.cpp  app.cpp2  hello.cc  io.cpp2  main.cpp  main.cpp2  other.cc  other.h2  ram_layout.cc  ram_manager.cpp2  wut.cpp
source/fs/: CMakeLists.txt  fs.cpp  littlefs.cpp  littlefs.cpp2
source/fs/include/yasboot/fs/: filesystem.hpp  littlefs.hpp
source/fs/include/yasboot/mbr/: fs.hpp
source/mbr/: CMakeLists.txt  mbr.cpp  mbr.cpp2
source/mbr/include/yasboot/mbr/: mbr.hpp
source/mbr/yasboot/mbr/: mbr.hpp
tests/: CMakeLists.txt
tests/simulation/: CMakeLists.txt
tests/simulation/cmake/: create_test_targets.cmake
tests/simulation/mspc/: CMakeLists.txt
tests/simulation/mspc/firmware/: CMakeLists.txt  packages.json
tests/simulation/mspc/firmware/board/: mspc.h  mspc_yasboot_firmware.ld
tests/simulation/mspc/firmware/cmake/: include_yasld_targets.cmake
tests/simulation/mspc/firmware/hello/: CMakeLists.txt  main.cpp
tests/simulation/mspc/firmware/yasld_firmwares/: CMakeLists.txt  packages.json
tests/simulation/mspc/firmware/yasld_firmwares/hello/: CMakeLists.txt  executable.ld  main.cpp  vector_table.S  vectors.cpp  vectors.hpp
tests/simulation/mspc/tests/: CMakeLists.txt  common.robot  execute.resc
tests/simulation/mspc/tests/boot_relocatable_hello/: CMakeLists.txt  boot_relocatable_hello.robot
tests/simulation/mspc/tests/boot_relocatable_hello/disk/: .gitignore  disk_layout.json  hello_from_relocatable_module.yaff
tests/simulation/mspc/tests/boot_standalone_non_relocatable/: CMakeLists.txt
tests/simulation/mspc/tests/boot_standalone_non_relocatable/disk/: .gitignore  disk_layout.json
tests/simulation/mspc/tests/boot_standalone_non_relocatable/disk/boot/: boot.conf
tests/st/: CMakeLists.txt  requirements.txt
tests/st/data/: invalid_mbr.img  mbr_and_two_partitions.img  mbr_with_partition_at_0x4000.img
tests/st/features/: mbr.feature  start.feature
tests/st/features/steps/: sut.py
